[project]
name = "ventory"
version = "1.0.0"
description = "AI-powered inventory assistant for Nigerian shop owners — via WhatsApp"
requires-python = ">=3.11,<3.13"
dependencies = [
    # Web
    "fastapi==0.111.0",
    "uvicorn[standard]==0.30.1",
    "httpx==0.27.0",
    "python-multipart==0.0.9",
    "python-dotenv==1.0.1",

    # Database
    "sqlalchemy[asyncio]==2.0.30",
    "asyncpg==0.29.0",
    "alembic==1.13.1",

    # Validation
    "pydantic==2.7.4",

    # AI — Gemini via google-genai SDK (transcription, query answering)
    "google-genai>=1.0.0",

    # AI — LangGraph agent + LangChain OpenAI-compat for Gemini
    "langgraph>=0.2.0",
    "langchain-openai>=0.1.0",
    "langchain-core>=0.2.0",

    # Scheduler
    "apscheduler>=3.11.2",
    "pytz>=2026.2",

    # Exports
    "pandas>=3.0.3",
    "fpdf2>=2.8.7",
]

[dependency-groups]
dev = [
    "aiosqlite>=0.22.0",
    "pytest>=9.0.0",
    "pytest-asyncio>=1.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"